[gd_scene load_steps=12 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://player_material.tres" type="Material" id=2]
[ext_resource path="res://debug_tools/DebugDrawer.tscn" type="PackedScene" id=3]

[sub_resource type="CapsuleShape" id=1]
radius = 0.5

[sub_resource type="CapsuleMesh" id=3]
radius = 0.5

[sub_resource type="SphereShape" id=4]
radius = 0.5

[sub_resource type="SphereMesh" id=5]
radius = 0.5
height = 1.0

[sub_resource type="CylinderShape" id=8]
radius = 0.5

[sub_resource type="CylinderMesh" id=9]
top_radius = 0.5
bottom_radius = 0.5

[sub_resource type="BoxShape" id=6]
extents = Vector3( 0.5, 0.5, 0.5 )

[sub_resource type="CubeMesh" id=7]
size = Vector3( 1, 1, 1 )

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )
camera_follows_rotation = true

[node name="CameraHelper" type="Spatial" parent="."]

[node name="CameraPosition" type="Spatial" parent="CameraHelper"]

[node name="Camera" type="Camera" parent="CameraHelper/CameraPosition"]
far = 400.0

[node name="DebugDrawer" parent="." instance=ExtResource( 3 )]

[node name="ObjectHolder" type="Node" parent="."]

[node name="PlayerBodyCapsule" type="CollisionShape" parent="ObjectHolder"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0 )
visible = false
shape = SubResource( 1 )

[node name="Model" type="MeshInstance" parent="ObjectHolder/PlayerBodyCapsule"]
transform = Transform( 1, 0, 0, 0, 1, 3.12639e-13, 0, -3.12639e-13, 1, 0, -1.62921e-07, 2.65433e-14 )
material_override = ExtResource( 2 )
mesh = SubResource( 3 )
material/0 = null

[node name="PlayerBodySphere" type="CollisionShape" parent="ObjectHolder"]
visible = false
shape = SubResource( 4 )

[node name="Model" type="MeshInstance" parent="ObjectHolder/PlayerBodySphere"]
material_override = ExtResource( 2 )
mesh = SubResource( 5 )
material/0 = null

[node name="PlayerBodyCylinder" type="CollisionShape" parent="ObjectHolder"]
visible = false
shape = SubResource( 8 )

[node name="Model" type="MeshInstance" parent="ObjectHolder/PlayerBodyCylinder"]
material_override = ExtResource( 2 )
mesh = SubResource( 9 )
material/0 = null

[node name="PlayerBodyBox" type="CollisionShape" parent="ObjectHolder"]
visible = false
shape = SubResource( 6 )

[node name="Model" type="MeshInstance" parent="ObjectHolder/PlayerBodyBox"]
material_override = ExtResource( 2 )
mesh = SubResource( 7 )
material/0 = null
